WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278186
[Writing Tools] Affordance doesn't show up when hovering over multiple lines of text containing newlines
https://bugs.webkit.org/show_bug.cgi?id=278186
Summary
[Writing Tools] Affordance doesn't show up when hovering over multiple lines ...
Aditya Keerthi
Reported
2024-08-15 13:39:53 PDT
rdar://129721335
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-08-15 14:12:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32264
EWS
Comment 2
2024-08-15 19:09:44 PDT
Committed
282327@main
(93a8eb15de1e): <
https://commits.webkit.org/282327@main
> Reviewed commits have been landed. Closing PR #32264 and removing active labels.
EWS
Comment 3
2024-08-16 16:13:24 PDT
Committed
280938.237@safari-7619-branch
(52596ea908f4): <
https://commits.webkit.org/280938.237@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1605 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug